2004-10-18  Andreas Kupries <andreask@activestate.com>

	* generic/threadCmd.c (ThreadErrorProc): Added code to explicitly
	  initialize the field 'interp' in ThreadSendData. This was ok
	  (NULL) for a regular build, but when build with symbols the
	  guard pattern forced a crash in test thread-16.2.

	* tests/thread.test: Duplicate test id thread-16.1 renamed to
	  thread-16.2.

2004-08-14 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadPoolCmd.c: fixed broken parsing of 
	pool handles. Pool handles are now generated in the
	same format as thread handles.

	* generic/threadCmd.c: thread handles are now cased to
	(void*) and sprint/sscanf calls are used to generate thread
	handles. This concludes the effort of correcting broken
	handles on 64-bit machines since the problem was actually
	in Tcl itself, rather than here.

2004-07-21 Zoran Vasiljevic <zoran@archiware.com>

	* generic/tclThread.h: corrected namespace prefix for
	AOLserver 4.x or higher, since namespaced commands are
	now supported.

	* generic/threadCmd.c: allows for re-initializing of package
	commands for AOLserver 4.x (or higheri) interpreters. This way
	we assure to have correct set of commands even if nobody
	loaded the package on server startup.
	Also, thread handles returned by the package now have the form:
	"tid<number>" in (yet another) attempt to rectify problems found
	on Cray computers.

	* generic/threadPoolCmd.c: adjusted handles of the pools to
	match ones of threads (see above).

2004-07-21 Zoran Vasiljevic <zoran@archiware.com>

	* doc/*: reformatted docs and added some clarifications 
	about mutex handling.

	* generic/threadCmd.c: rewritten handling of thread handles
	as passed to Tcl. Instead of casting Tcl_ThreadId to unsigned int
	which brought some problems on Cray machines, we're now generating
	opaque handles and match them to Tcl_ThreadId internally.

	NOTE: this is not supposed to be a compatibility issue since